--- a/themes/default/templates/base.html
+++ b/themes/default/templates/base.html
@@ -3,14 +3,24 @@
 <head profile="http://gmpg.org/xfn/11">
 {%mf head%}
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8;" />
+<meta name="wumiiVerification" content="054c2189-bbbb-44a4-ab36-114c442f717f" />
 <title>{% block title %} {{ blog.title}}{% endblock %}</title>
 <link rel="stylesheet" href="/themes/{{ blog.theme_name }}/style.css" type="text/css" media="screen" />
-<link rel="alternate" type="application/rss+xml" title="{{ blog.title }} RSS Feed" href="{{ blog.feedurl }}" />
-<link rel="shortcut icon" href="/favicon.ico" >
+<link rel="alternate" type="application/atom+xml" title="{{ blog.title }} RSS Feed" href="{{ blog.feedurl }}" />
+<link rel="openid.server" href="http://www.myopenid.com/server" />
+<link rel="openid.delegate" href="http://lobatt.myopenid.com/" />
 <link href="/static/wlwmanifest.xml" type="application/wlwmanifest+xml" rel="wlwmanifest"/>
+<link rel="EditURI" type="application/rsd+xml" href="/static/rsd.xml" />
 <script type="text/javascript" src="/themes/{{ blog.theme_name }}/rounded_corners_lite.inc.js"></script>
-<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js"></script>
-{% block head_block %}{% endblock %}
+<script type="text/javascript" src="/static/js/jquery-1.3.2.min.js"></script>
+{% block head_block %}
+<meta name="Keywords" content="perlfect,blog,perl,programming,IT,freewheel">
+<meta name="Description" content="This is a blog of Lobatt(LICH) on Google App Engine, a temporal home for perlfect blog, or maybe longer...">
+<meta name="geo.placename" content="Beijing, China" />
+<meta name="geo.position" content="39.904667;116.408198" />
+<meta name="geo.region" content="CN-Beijing" />
+<meta name="ICBM" content="39.904667, 116.408198" />
+{% endblock %}
 <script type="text/JavaScript">
 window.onload = function()
 {
@@ -31,7 +41,6 @@ var myBoxObject = new curvyCorners(settings, "sidebar");
 myBoxObject.applyCornersToAll();
 }
 </script>
-
 {%endmf%}
 </head>
 
@@ -71,7 +80,7 @@ myBoxObject.applyCornersToAll();
 
 <form method="get" id="searchform" action="http://www.google.com/search">
 		<input type="text" value="Search..." onfocus="if (this.value == 'Search...') {this.value = '';}" onblur="if (this.value == '') {this.value = 'Search...';}" name="as_q" id="s" />
-		<input type="image" src="/themes/{{blog.theme_name}}/images/transparent.gif" id="go" alt="Search" title="Search" />
+		<input type="image" src="/themes/{{ blog.theme_name }}/images/transparent.gif" id="go" alt="Search" title="Search" />
 		<input name="as_sitesearch" value="{{blog.domain}}" type="hidden">
 
 		</form>
@@ -97,11 +106,20 @@ myBoxObject.applyCornersToAll();
 <div id="footer">
 {%mf footer%}
 	<div class="footer">
-	    <p class="fooleft">{{blog.title}} is proudly powered by <a href="http://xuming.net">Micolog</a>. Theme by <a href="http://bob.my/" title="Simple">Bob</a></p>
+			<p class="fooleft">{{blog.title}} is proudly powered by <a href="http://xuming.net">Micolog</a>. Theme by <a href="http://bob.my/" title="Simple">Bob</a></p>
 		<p class="fooright"><a href="#top" title="Top">top</a></p>
 	</div>
 {%endmf%}
 </div>
-</div>
+<!-- disqus code -->
+<script type="text/javascript">
+var disqus_shortname = 'perlfectblog';
+(function () {
+	  var s = document.createElement('script'); s.async = true;
+	    s.src = 'http://disqus.com/forums/perlfectblog/count.js';
+		  (document.getElementsByTagName('HEAD')[0] || document.getElementsByTagName('BODY')[0]).appendChild(s);
+}());
+</script>
+<!--end for disqus code-->
 </body>
 </html>
