--- a/themes/default/templates/comments.html
+++ b/themes/default/templates/comments.html
@@ -10,11 +10,11 @@
 
 		<li class="{%cycle alt1,alt %}" id="comment-{{comment.key.id}}">
 			<div class="gravatar"><img height="50" width="50" class="avatar avatar-50" src="{{comment.gravatar_url}}" alt=""/></div>
-			<div class="comments"><a href="{{comment.weburl}}" target="_blank">{{comment.author}}</a> On <small class="commentmetadata"><a href="#comment-{{comment.key.id}}" title="">{{comment.date.date|datetz:"Y-m-d"}} at {{comment.date|datetz:"H:i"}}</a> <a onclick="return backcomment('<a href=#comment-{{comment.key.id}}>{{comment.author}}</a>');" href="#commentarea"><span color="blue">Reply</span></a> </small>
+			<div class="comments"><a href="{{comment.weburl}}" target="_blank">{{comment.author}}</a> On <small class="commentmetadata"><a href="#comment-{{comment.key.id}}" title="">{{comment.date.date|datetz:"Y-m-d"}} at {{comment.date|datetz:"H:i"}}</a> </small>
 
 			<br />
 
-			<p>{{comment.content|safe}}</p>
+			<p>{{comment.content}}</p>
 
 			</div>
 			<div class="clear"></div>
@@ -30,48 +30,38 @@
 
 
 
-<a name="commentarea"></a>
+
 <h3 id="respond">Leave a Reply</h3>
 <form action="/post_comment" method="post" id="commentform">
-<script type="text/javascript">
-function backcomment(msg){
-backdb=document.getElementById('comment');
-backdb.value= backdb.value.concat("@", msg, "\n");
-return true;
-}
-</script>
+
 <p><input type="text" name="author" id="author" value="{{user_name}}" size="22" tabindex="1" />
-<label for="author">Name <span style="color:red">(*)</span></label></p>
+<label for="author"><small>Name (required)</small></label></p>
 
 <p><input type="text" name="email" id="email" value="{{user_email}}" size="22" tabindex="2" />
-<label for="email">Mail(will not be published) <span style="color:red">(*)</span></small></label></p>
+<label for="email"><small>Mail (will not be published) (required)</small></label></p>
 
 <p><input type="text" name="url" id="url" value="{{user_url}}" size="22" tabindex="3" />
-<label for="url">Website</label></p>
-
-<p><input type="checkbox" name="reply_notify_mail" id="reply_notify_mail" checked="checked" size="45" tabindex="4" />
-<label for="reply_notify_mail">Send me reply notify mail</label></p>
+<label for="url"><small>Website</small></label></p>
 
 {%ifequal blog.comment_check_type 1%}
 <p id="checkarea">
-<iframe style="width:80px;height:20px;border:0;" scrolling="no" src="/checkcode/" frameborder="0" >
-</iframe>
-<input type="text" name="checkret" id="checkret" value="" size="5" tabindex="5" />
+<iframe src="/checkcode/"  style="width:80px;height:20px;border:0;"SCROLLING=no></iframe>
+<input type="text" name="checkret" id="checkret" value="" size="5" tabindex="4" />
 </p>
 {%endifequal%}
 {%ifequal blog.comment_check_type 2%}
 <div id="checkarea" style="padding-bottom:15px">
 
 <div style="float:left;margin-right:8px;"><label for="checkret"><small>Checkcode:</small></label>
-<input type="text" name="checkret" id="checkret" value="" size="5" tabindex="5" />
+<input type="text" name="checkret" id="checkret" value="" size="5" tabindex="4" />
 </div>
 <img id='checkimg' src='/checkimg/' style="border:0px;padding:0px;" title='Click to change image' onclick="reloadCheckImage();"/>
 </div>
 {%endifequal%}
 
-<p><textarea name="comment" id="comment" cols="100%" rows="10" tabindex="6"></textarea></p>
+<p><textarea name="comment" id="comment" cols="100%" rows="10" tabindex="4"></textarea></p>
 
-<p><input name="submit" type="submit"  id="submit" tabindex="7" value="Submit Comment" />
+<p><input name="submit" type="submit"  id="submit" tabindex="5" value="Submit Comment" />
 </p>
 <input type="hidden" name="key" value="{{entry.key}}" />
 </form>
@@ -80,15 +70,15 @@ return true;
     commentuser=$.cookie('comment_user');
        if (commentuser)
        {
-        //[user,email,url]=commentuser.split('#@#');
-        var tuple=commentuser.split('#@#');
+         //[user,email,url]=commentuser.split('#@#');
+         var tuple=commentuser.split('#@#');
         var user,email,url;
         user=tuple[0];
         email=tuple[1];
         url=tuple[2];
-        $('#author').val(user);
-        $('#email').val(email);
-        $('#url').val(url);
+         $('#author').val(user);
+         $('#email').val(email);
+         $('#url').val(url);
        }
 
   $('#commentform').submit(function(){
@@ -122,5 +112,5 @@ return true;
 </script>
 
 {% else %}
-<p class="nocomments">è¯„è®ºå…³é—­</p>
+<p class="nocomments">ÆÀÂÛÒÑ¹Ø±Õ</p>
 {% endif %}
