--- a/themes/default/templates/index.html
+++ b/themes/default/templates/index.html
@@ -11,11 +11,12 @@
 <div class="nifty"><h2><a href="/{{ entry.link }}" rel="bookmark" title="Permanent Link to {{entry.title}}">{{entry.title}}</a> <span class="date">{{entry.date|datetz:"F jS, Y"}}</span></h2></div>
 
 
-<div class="en_body">
-{{entry.content_excerpt|safe}}
-</div>
 
-<div class="meta">{% if entry.strtags %}Tags: {%for tag in entry.tags%}<a href="/tag/{{tag|urlencode}}">{{tag}}</a> {%endfor%}<br><br>{%endif%}  Posted in {%for cate in entry.categories%} <a href="/category/{{cate.slug}}">{{cate.name}}</a> {%endfor%} | {%if self.is_admin%}<a href="{{entry.edit_url}}">Edit</a> | {%endif%}  <a href="/{{entry.link}}#comments">Comments({{entry.commentcount}})&#187;</a></div>
+{{entry.content_excerpt|safe}}
+
+<div class="meta">{% if entry.strtags %}Tags: {%for tag in entry.tags%}<a href="/tag/{{tag|urlencode}}">{{tag}}</a> {%endfor%}<br><br>{%endif%}  Posted in {%for cate in entry.categories%} <a href="/category/{{cate.slug}}">{{cate.name}}</a> {%endfor%} | {%if self.is_admin%}<a href="{{entry.edit_url}}">Edit</a> | {%endif%}  
+<!--<a href="/{{entry.link}}#comments">Comments({{entry.commentcount}})&#187;</a> | -->
+<a href="/{{entry.link}}#disqus_thread">Disqus Comments</a></div>
 </div>
 
 </div>
@@ -26,11 +27,7 @@
 <div class="ctop"></div>
 <div class="box">
 <div class="alignleft">{% if show_next %}<a href="/page/{{ pageindex|add:"1" }}">&laquo; Older Entries</a>{%endif%}</div>
-<div class="aligncenter">
-<script type="text/javascript" src="/static/js/pagenavi.js"></script>
-<script type="text/javascript">showPageLink("/page/",{{ pageindex }},{{ pagecount }},"");</script>
-</div>
-<div class="alignright">{% if show_prev %}<a href="/page/{{ pageindex|add:"-1" }}">Newer Entries &raquo;</a>{%endif%}</div>
+<div class="alignright">{% if show_prev %}<a href="/page/{{ pageindex|add:"-1" }}">&laquo; Newer Entries</a>{%endif%}</div>
 <div class="clear"></div></div>
 <div class="cbottom"></div>
 <div class="space"></div>
@@ -49,6 +46,7 @@
 {% endif %}
 
 </div>
+
 {% include "sidebar.html" %}
 {% endblock %}
 
