--- a/themes/default/templates/page.html
+++ b/themes/default/templates/page.html
@@ -13,11 +13,10 @@
 {% if entry %}
 
 <div id="post-{{entry.key}}">
-<div class="nifty"><h2><a href="/{{ entry.link|safe }}" rel="bookmark" title="Permanent Link to {{entry.title}}">{{entry.title}}</a> <span class="date">{{entry.date|datetz:"F jS, Y"}}</span></h2></div>
-<div class="en_body">
+<div class="nifty"><h2><a href="/{{ entry.link }}" rel="bookmark" title="Permanent Link to {{entry.title}}">{{entry.title}}</a> <span class="date">{{entry.date|datetz:"F jS, Y"}}</span></h2></div>
+
 {{ entry.content|safe }}
-</div>
-<div class="meta">{%if self.is_admin%}<a href="{{entry.edit_url|safe}}">Edit this entry</a>  {%endif%}  </div>
+<div class="meta">{%if self.is_admin%}<a href="{{entry.edit_url}}">Edit this entry</a>  {%endif%}  </div>
 
 </div>
 </div>
@@ -27,7 +26,7 @@
 
 <div class="ctop"></div>
 <div class="box">
-{% include "comments.html" %}
+{% include "comment_disqus.html" %}
 </div>
 <div class="cbottom"></div>
 <div class="space"></div>
