--- a/themes/default/templates/sidebar.html
+++ b/themes/default/templates/sidebar.html
@@ -1,34 +1,70 @@
-<div class="sidebar">
+<div class="sideb">
 <ul>
 <li>
-<h2>Recent Comments</h2>
+<a rel="license" href="http://creativecommons.org/licenses/by-nc/3.0/"><img alt="Creative Commons License" style="border-width:0" src="http://creativecommons.org/images/public/somerights20.png" /></a>
+</li>
+<!--
+<li>
+
+    <h2>Comments</h2>
         <ul>
         {% for comment in recent_comments %}
         <li><a href="/{{comment.entry.link}}#comment-{{comment.key.id}}">{{comment.author}}:{{comment.shortcontent}}...</a> </li>
         {%endfor%}
         </ul>
         </li>
+        -->
 
 <li>
  <h2>Categories</h2>
   <ul>
  	{%for cate in categories%}
-  <li>	<a href="/category/{{cate.slug|urlencode}}">{{cate.name}}({{cate.count}})</a></li>
+  <li>	<a href="/category/{{cate.slug}}">{{cate.name}}({{cate.count}})</a></li>
  	{%endfor%}
  	</ul>
 
 </li>
 
 <li>
-<h2>Blog roll</h2>
+<h2>Links</h2>
 <ul>
 {%for link in blogroll%}
 <li><a href="{{link.href}}">{{link.linktext}}</a></li>
 {%endfor%}
-
 </ul>
 </li>
-
-
+<li>
+<h2>*</h2>
+<ul>
+<li><a href="http://feed.w3.org/check.cgi?url=http%3A//blog.perlfect.me/feed"><img src="/static/images/valid-atom.png" alt="[Valid Atom 1.0]" title="Validate my Atom 1.0 feed" /></a></li>
+<li><p><a href="http://geourl.org/near?p=http://blog.perlfect.me"
+  title="check out my neighbors in meatspace">
+  <img src="http://i.geourl.org/80x15/geourl-tiles.png" alt="GeoURL"
+    border="0" width="80" height="15" /></a></p></li>
+</ul>
+</li>
+<li>
+<div id="googlead">
+<script type="text/javascript">
+google_ad_client = "pub-6293971471163289";
+google_ad_slot = "1503208580";
+google_ad_width = 200;
+google_ad_height = 200;
+</script>
+<script type="text/javascript"
+src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
+</script></div>
+</li>
+<li>
+<div>
+<script type="text/javascript"  src="http://pcas.szabgab.com/ads/direct_link_selflink.js?cnt=4&noself=1"></script>
+</div>
+</li>
+<li>
+<iframe id="sina_widget_1779626783" style="width:100%; height:500px;" frameborder="0" scrolling="no" src="http://v.t.sina.com.cn/widget/widget_blog.php?uid=1779626783&height=500&skin=wd_02&showpic=1"></iframe>
+</li>
+<li>
+<script src="http://img3.douban.com/js/packed_radiowidget2.js?doubanid=lobatt&maxresults=3"></script>
+</li>
 </ul>
 </div>
