--- a/themes/default/templates/single.html
+++ b/themes/default/templates/single.html
@@ -9,9 +9,24 @@
 
 <div id="post-{{entry.key}}">
 <div class="nifty"><h2><a href="/{{ entry.link|safe }}" rel="bookmark" title="Permanent Link to {{entry.title}}">{{entry.title}}</a> <span class="date">{{entry.date|datetz:"F jS, Y"}}</span></h2></div>
-<div class="en_body">
 {%mf entry_content %}
 {{ entry.content|safe }}
+<!-- wumii -->
+<div class="wumii-hook">
+    <input type="hidden" name="wurl" value="{{blog.baseurl}}/{{ entry.link }}" />
+    <input type="hidden" name="wtitle" value="{{entry.title}}" />
+</div>
+<script>
+    var wumiiSitePrefix = "{{blog.baseurl}}";
+</script>
+<script type="text/javascript" id="wumiiRelatedItems" src="http://widget.wumii.com/ext/relatedItemsWidget.htm?type=1&amp;mode=3&amp;num=5"></script>
+<a href="http://www.wumii.com/widget/relatedItems.htm" style="border:0;">
+    <img src="http://static.wumii.com/images/pixel.png" alt="无觅相关文章插件" style="border:0;padding:0;margin:0;" />
+</a>
+<p style="display: none;">
+    {%for tag in entry.tags%}<a rel="tag">{{tag}}</a>{%endfor%}
+</p>
+<!-- wumii -->
 {%endmf%}
 {%mf after_entry_content%}
 	{%if relateposts%}
@@ -22,9 +37,12 @@
                 {%endfor%}
                 </ul>
                 {%endif%}
+<div class=share>
+  <a class="bshareDiv" href="http://www.bshare.cn/share">分享按钮
+  </a><script language="javascript" type="text/javascript" src="http://www.bshare.cn/button.js#uuid=fdc6216e-460e-4354-8eed-cd34cbbd803b&style=2&textcolor=#000000&bgcolor=none&bp=sinaminiblog,greader,twitter,linkedin,douban,renren,facebook,reddit&ssc=false&sn=true&text=Share"></script>
 </div>
 <div class="meta">
-{% if entry.strtags %}Tags: {%for tag in entry.tags%}<a href="/tag/{{tag|urlencode}}">{{tag}}</a> {%endfor%}<br><br>{%endif%}  Posted in {%for cate in entry.categories%} <a href="/category/{{cate.slug}}">{{cate.name}}</a> {%endfor%} | {%if self.is_admin%}<a href="{{entry.edit_url|safe}}">Edit</a>  {%endif%}
+{% if entry.strtags %}Tags: {%for tag in entry.tags%}<a href="/tag/{{tag|urlencode}}">{{tag}}</a> {%endfor%}<br><br>{%endif%}  Posted in {%for cate in entry.categories%} <a href="/category/{{cate.slug}}">{{cate.name}}</a> {%endfor%} | {%if self.is_admin%}<a href="{{entry.edit_url}}">Edit</a>  {%endif%}
 {%if blog.allow_trackback and entry.allow_trackback%}
 <div style="padding:2px 0">
 Trackback:<a href='{{entry.trackbackurl|safe}}'>{{entry.trackbackurl}}</a>
@@ -40,7 +58,7 @@ Trackback:<a href='{{entry.trackbackurl|safe}}'>{{entry.trackbackurl}}</a>
 
 <div class="ctop"></div>
 <div class="box">
-{% include "comments.html" %}
+{% include "comment_disqus.html" %}
 </div>
 <div class="cbottom"></div>
 <div class="space"></div>
