--- a/views/admin/entry.html
+++ b/views/admin/entry.html
@@ -51,6 +51,7 @@
 <script type="text/javascript">
     $('#content').ready(function() {
         $('.editor-toolbar').show();
+		switchEditors.pre_save = function(){};
 		$('#edButtonHTML').click(function(){switchEditors.go('content','html');});
 		$('#edButtonPreview').click(function(){switchEditors.go('content','tinymce');});
 
