--- a/themes/default/templates/base.html
+++ b/themes/default/templates/base.html
@@ -111,7 +111,7 @@ myBoxObject.applyCornersToAll();
 	</div>
 {%endmf%}
 </div>
-<!-- disqus code -->
+<!-- disqus code
 <script type="text/javascript">
 var disqus_shortname = 'perlfectblog';
 (function () {
@@ -120,6 +120,6 @@ var disqus_shortname = 'perlfectblog';
 		  (document.getElementsByTagName('HEAD')[0] || document.getElementsByTagName('BODY')[0]).appendChild(s);
 }());
 </script>
-<!--end for disqus code-->
+end for disqus code-->
 </body>
 </html>
