--- a/themes/default/templates/base.html
+++ b/themes/default/templates/base.html
@@ -5,14 +5,14 @@
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8;" />
 <meta name="wumiiVerification" content="054c2189-bbbb-44a4-ab36-114c442f717f" />
 <title>{% block title %} {{ blog.title}}{% endblock %}</title>
-<link rel="stylesheet" href="/themes/{{ blog.theme_name }}/style.css" type="text/css" media="screen" />
+<link rel="stylesheet" href="{{ blog.static_url }}/themes/{{ blog.theme_name }}/style.css" type="text/css" media="screen" />
 <link rel="alternate" type="application/atom+xml" title="{{ blog.title }} RSS Feed" href="{{ blog.feedurl }}" />
 <link rel="openid.server" href="http://www.myopenid.com/server" />
 <link rel="openid.delegate" href="http://lobatt.myopenid.com/" />
-<link href="/static/wlwmanifest.xml" type="application/wlwmanifest+xml" rel="wlwmanifest"/>
-<link rel="EditURI" type="application/rsd+xml" href="/static/rsd.xml" />
-<script type="text/javascript" src="/themes/{{ blog.theme_name }}/rounded_corners_lite.inc.js"></script>
-<script type="text/javascript" src="/static/js/jquery-1.3.2.min.js"></script>
+<link href="{{ blog.static_url }}/static/wlwmanifest.xml" type="application/wlwmanifest+xml" rel="wlwmanifest"/>
+<link rel="EditURI" type="application/rsd+xml" href="{{ blog.static_url }}/static/rsd.xml" />
+<script type="text/javascript" src="{{ blog.static_url }}/themes/{{ blog.theme_name }}/rounded_corners_lite.inc.js"></script>
+<script type="text/javascript" src="{{ blog.static_url }}/static/js/jquery-1.3.2.min.js"></script>
 {% block head_block %}
 <meta name="Keywords" content="perlfect,blog,perl,programming,IT,freewheel">
 <meta name="Description" content="This is a blog of Lobatt(LICH) on Google App Engine, a temporal home for perlfect blog, or maybe longer...">
@@ -79,7 +79,7 @@ myBoxObject.applyCornersToAll();
 
 <form method="get" id="searchform" action="http://www.google.com/search">
 		<input type="text" value="Search..." onfocus="if (this.value == 'Search...') {this.value = '';}" onblur="if (this.value == '') {this.value = 'Search...';}" name="as_q" id="s" />
-		<input type="image" src="/themes/{{ blog.theme_name }}/images/transparent.gif" id="go" alt="Search" title="Search" />
+		<input type="image" src="{{ blog.static_url }}/themes/{{ blog.theme_name }}/images/transparent.gif" id="go" alt="Search" title="Search" />
 		<input name="as_sitesearch" value="{{blog.domain}}" type="hidden">
 
 		</form>
