--- a/views/admin/posts.html
+++ b/views/admin/posts.html
@@ -34,7 +34,7 @@
 		<thead>
 			<tr>
 			<th class="check-column" scope="col"><input type="checkbox" onclick="$('input[name=checks]').attr('checked',this.checked);"/></th>
-		<th style="width: 15%;">{% trans "Date"%}</th><th>{%trans "Title"%}</th><th>{%trans "Author"%}</th>	<th class="num" scope="col"><div class="vers"><img src="/static/images/comment-grey-bubble.png" alt="Comments"/></div></th><th>{%trans "Status"%}</th><th>{%trans "allow comment"%}</th></tr>
+		<th style="width: 15%;">{% trans "Date"%}</th><th>{%trans "Title"%}</th><th>{%trans "Author"%}</th>	<th class="num" scope="col"><div class="vers"><img src="{{ blog.static_url }}/static/images/comment-grey-bubble.png" alt="Comments"/></div></th><th>{%trans "Status"%}</th><th>{%trans "allow comment"%}</th></tr>
 			</thead>
 			<tbody>
             {%for entry in entries%}
