--- a/views/admin/base.html
+++ b/views/admin/base.html
@@ -4,8 +4,8 @@
 <head profile="http://gmpg.org/xfn/11">
     <title>{% block title %} {{ blog.title }}{% endblock %}</title>
     <meta name="generator" content="Mlog" />
-    <link rel="stylesheet" href="/static/admin/style.css" type="text/css" media="screen" />
-     <script type="text/javascript" src="/static/js/utils.js"></script>
+    <link rel="stylesheet" href="{{ blog.static_url }}/static/admin/style.css" type="text/css" media="screen" />
+     <script type="text/javascript" src="{{ blog.static_url }}/static/js/utils.js"></script>
      <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js"></script>
 <script>
 var userSettings = {'url':'/','uid':'{{self.author.key}}','time':'{% now "r" %}'};
@@ -113,7 +113,7 @@ $('#more').click(
         {%if not blog.admin_essential%}
         <div id="credits">
             <!-- Credit link can be removed by giving a $5 donation, it'll help us all build good karma! -->
-            <div class="flogo" style='background : url(/static/images/mlog.png) no-repeat;'>
+            <div class="flogo" style='background : url({{ blog.static_url }}/static/images/mlog.png) no-repeat;'>
                 <a href="http://micolog.xuming.net"> Micolog {{blog.version}}</a> for <br><a href="http://code.google.com/appengine/" > google app engine</a>
             </div>
             <span>Theme from: <a href="http://www.freshpressthemes.com" title="See more fresh themes" target="_blank">FreshPress Themes</a> {% now "Y" %}</span>
