--- a/views/admin/import.html
+++ b/views/admin/import.html
@@ -1,7 +1,7 @@
 ﻿{% extends "base.html" %}
 {% load i18n %}
 {% block header %}
-<script src='/static/js/jquery.blockUI.js' type="text/javascript"></script>
+<script src='{{ blog.static_url }}/static/js/jquery.blockUI.js' type="text/javascript"></script>
 <script language="javascript" type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.7.2/jquery-ui.min.js"></script>
 <style>
 #ui-datepicker-div{border:1px solid ;padding:10px ;background-color:white}
