--- a/views/admin/plugin_action.html
+++ b/views/admin/plugin_action.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% load i18n %}
 {% block header %}
-<script src='/static/js/jquery.blockUI.js' type="text/javascript"></script>
+<script src='{{ blog.static_url }}/static/js/jquery.blockUI.js' type="text/javascript"></script>
 {% endblock %}
 
 {% block nav2 %}
