--- a/views/admin/status.html
+++ b/views/admin/status.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% load i18n %}
 {% block header %}
-<script src='/static/js/jquery.blockUI.js' type="text/javascript"></script>
+<script src='{{ blog.static_url }}/static/js/jquery.blockUI.js' type="text/javascript"></script>
 <script type="text/javascript">
 	$(document).ajaxError(function(request, settings){
        $('#bmsg').html('Error<br/><input type="button" value="Ok" onclick="$.unblockUI()"></input>');
@@ -10,7 +10,7 @@
 
 	 function clear_cache()
 	 {
-	    $.blockUI({ message: '<h3 id="bmsg"><img src="/static/images/busy.gif" /> Clearing cache data now...</h3>' });
+	    $.blockUI({ message: '<h3 id="bmsg"><img src="{{ blog.static_url }}/static/images/busy.gif" /> Clearing cache data now...</h3>' });
 	 	$.getJSON("/admin/do/cacheclear", function(json){
 	 		  $('#bmsg').html(json+'<br/><input type="button" value="Ok" onclick="$.unblockUI()"></input>');
 	 		  $('.blockUI').css('cursor','');
