--- a/views/admin/templates/entry.html
+++ b/views/admin/templates/entry.html
@@ -45,8 +45,8 @@
 {%mf editor_header%}
 <script language="javascript" type="text/javascript" src="{{ blog.static_url }}/static/js/editor.js"></script>
 
-<script type="text/javascript" src="/tinymce/tiny_mce.js"></script>
-<script type="text/javascript" src="/tinymce/jquery.tinymce.js"></script>
+<script type="text/javascript" src="{{ blog.static_url }}/tinymce/tiny_mce.js"></script>
+<script type="text/javascript" src="{{ blog.static_url }}/tinymce/jquery.tinymce.js"></script>
 
 <script type="text/javascript">
     $('#content').ready(function() {
@@ -57,7 +57,7 @@
 
 			$('#content').tinymce({
 				// Location of TinyMCE script
-				script_url : '/tinymce/tiny_mce.js',
+				script_url : '{{ blog.static_url }}/tinymce/tiny_mce.js',
 	          	// General options
 				theme : "advanced",
 
@@ -82,7 +82,7 @@
 	      	   skin :'wp_theme',
 	      {%endifequal%}
 				// Example content CSS (should be your site CSS)
-				content_css : "/tinymce/wordpress.css",
+				content_css : "{{ blog.static_url }}/tinymce/wordpress.css",
 				extended_valid_elements : "textarea[cols|rows|disabled|name|readonly|class]",
 
 				// Drop lists for link/image/media/template dialogs
