--- a/themes/default/templates/page.html
+++ b/themes/default/templates/page.html
@@ -7,8 +7,7 @@
 {% endif %}
 {% endblock %}
 {% block content%}
-<div class="ctop"></div>
-<div class="box">
+<div class="content">
 
 {% if entry %}
 
@@ -20,15 +19,12 @@
 
 </div>
 </div>
-<div class="cbottom"></div>
 <div class="space"></div>
 
 
-<div class="ctop"></div>
-<div class="box">
+<div class="content">
 {% include "comment_disqus.html" %}
 </div>
-<div class="cbottom"></div>
 <div class="space"></div>
 
 {%endif%}
