--- a/themes/default/templates/sidebar.html
+++ b/themes/default/templates/sidebar.html
@@ -1,20 +1,9 @@
-<div class="sideb">
+<div class="sidebar pure-u-1-4">
 <ul>
 <li>
 <a rel="license" href="http://creativecommons.org/licenses/by-nc/3.0/"><img alt="Creative Commons License" style="border-width:0" src="http://creativecommons.org/images/public/somerights20.png" /></a>
+<a href="http://feed.w3.org/check.cgi?url=http%3A//blog.perlfect.me/feed"><img src="/static/images/valid-atom.png" alt="[Valid Atom 1.0]" title="Validate my Atom 1.0 feed" /></a>
 </li>
-<!--
-<li>
-
-    <h2>Comments</h2>
-        <ul>
-        {% for comment in recent_comments %}
-        <li><a href="/{{comment.entry.link}}#comment-{{comment.key.id}}">{{comment.author}}:{{comment.shortcontent}}...</a> </li>
-        {%endfor%}
-        </ul>
-        </li>
-        -->
-
 <li>
  <h2>Categories</h2>
   <ul>
@@ -34,14 +23,6 @@
 </ul>
 </li>
 <li>
-<h2>*</h2>
-<ul>
-<li><a href="http://feed.w3.org/check.cgi?url=http%3A//blog.perlfect.me/feed"><img src="/static/images/valid-atom.png" alt="[Valid Atom 1.0]" title="Validate my Atom 1.0 feed" /></a></li>
-<li><p><a href="http://geourl.org/near?p=http://blog.perlfect.me"
-  title="check out my neighbors in meatspace">
-  <img src="http://i.geourl.org/80x15/geourl-tiles.png" alt="GeoURL"
-    border="0" width="80" height="15" /></a></p></li>
-</ul>
 </li>
 <li>
 <div id="googlead">
@@ -54,17 +35,6 @@ google_ad_height = 200;
 <script type="text/javascript"
 src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
 </script></div>
-</li>
-<li>
-<div>
-<script type="text/javascript"  src="http://pcas.szabgab.com/ads/direct_link_selflink.js?cnt=4&noself=1"></script>
-</div>
-</li>
-<li>
-<iframe id="sina_widget_1779626783" style="width:100%; height:500px;" frameborder="0" scrolling="no" src="http://v.t.sina.com.cn/widget/widget_blog.php?uid=1779626783&height=500&skin=wd_02&showpic=1"></iframe>
-</li>
-<li>
-<script src="http://img3.douban.com/js/packed_radiowidget2.js?doubanid=lobatt&maxresults=3"></script>
 </li>
 </ul>
 </div>
