--- a/themes/default/templates/category.html
+++ b/themes/default/templates/category.html
@@ -1,8 +1,7 @@
 ﻿{% extends "base.html" %}
 {% block title %} {{category.name}} - {{blog.title}} {% endblock %}
 {% block content%}
-<div class="ctop"></div>
-<div class="box">
+<div class="content">
 
 <h2>{{category.name}}</h2>
 <ul>
@@ -23,7 +22,6 @@
 			{% endif %}
 		</div>
 </div>
-<div class="cbottom"></div>
 	<div class="space"></div>
 </div> 
 {% include "sidebar.html" %}
