--- a/themes/default/templates/index.html
+++ b/themes/default/templates/index.html
@@ -6,7 +6,7 @@
 
 
 <div class="ctop"></div>
-<div class="box">
+<div class="content">
 <div id="post-{{entry.key}}">
 <div class="nifty"><h2><a href="/{{ entry.link }}" rel="bookmark" title="Permanent Link to {{entry.title}}">{{entry.title}}</a> <span class="date">{{entry.date|datetz:"F jS, Y"}}</span></h2></div>
 
@@ -25,7 +25,7 @@
 {% endfor %}
 
 <div class="ctop"></div>
-<div class="box">
+<div class="content">
 <div class="alignleft">{% if show_next %}<a href="/page/{{ pageindex|add:"1" }}">&laquo; Older Entries</a>{%endif%}</div>
 <div class="alignright">{% if show_prev %}<a href="/page/{{ pageindex|add:"-1" }}">&laquo; Newer Entries</a>{%endif%}</div>
 <div class="clear"></div></div>
@@ -34,7 +34,7 @@
 
 {% else %}
 <div class="ctop"></div>
-<div class="box">
+<div class="content">
 <h2>Not Found</h2>
 <p>Sorry, but you are looking for something that isn't here.</p>
 </div>
