--- a/themes/default/templates/month.html
+++ b/themes/default/templates/month.html
@@ -3,14 +3,14 @@
 {% block content %}
 
 <!-- content START -->
-<div id="content">
+<div class="content">
 
 	<!-- main START -->
 	<div id="main">
 
 		<div class="boxcaption"><h3>存档</h3></div>
 
-		<div class="box">
+		<div class="content">
 			&#8216;{{year}}年{{month}}月&#8217; 的文章</div>
 
 		{% for entry in entries %}
