--- a/themes/default/templates/tag.html
+++ b/themes/default/templates/tag.html
@@ -1,8 +1,7 @@
 ﻿{% extends "base.html" %}
 {% block title %} {{category.name}} - {{blog.title}} {% endblock %}
 {% block content%}
-<div class="ctop"></div>
-<div class="box">
+<div class="content">
 
 
 <h2>{{tag}}</h2>
@@ -25,7 +24,6 @@
 		</div>
 
 </div>
-<div class="cbottom"></div>
 	<div class="space"></div>
 </div> 
 {% include "sidebar.html" %}
