load app.recurse, fixing category page

--- a/themes/default/templates/base.html
+++ b/themes/default/templates/base.html
@@ -4,6 +4,7 @@
 {%mf head%}
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8;" />
 <meta name="wumiiVerification" content="054c2189-bbbb-44a4-ab36-114c442f717f" />
+ <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>{% block title %} {{ blog.title}}{% endblock %}</title>
 <!--
 <link rel="stylesheet" href="{{ blog.static_url }}/themes/{{ blog.theme_name }}/style.css" type="text/css" media="screen" />
